added notebooks #01 and #02

--- a/02-Entendendo Percentis, Distribuicoes e Histogramas.ipynb
+++ b/02-Entendendo Percentis, Distribuicoes e Histogramas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "structural-rendering",
+   "id": "appropriate-ladder",
    "metadata": {},
    "source": [
     "# Percentis, Distribuições e Histogramas"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "greenhouse-christianity",
+   "execution_count": 1,
+   "id": "australian-password",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bottom-laptop",
+   "id": "catholic-romantic",
    "metadata": {},
    "source": [
     "## Exemplo percentis"
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "finnish-relevance",
+   "execution_count": 17,
+   "id": "personal-texture",
    "metadata": {},
    "outputs": [
     {
@@ -53,15 +53,36 @@
     }
    ],
    "source": [
-    "a1 = range(0, 11)\n",
-    "for i in a1:\n",
+    "for i in range(0, 11):\n",
     "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "northern-publication",
+   "execution_count": 27,
+   "id": "stable-pollution",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a1 = [*range(0, 11)]\n",
+    "a1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "authorized-easter",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +173,7 @@
        "10  10"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "antique-literacy",
+   "id": "supported-tongue",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "critical-electronics",
+   "id": "radical-short",
    "metadata": {},
    "source": [
     "## Histograma"
@@ -260,8 +281,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "smoking-triple",
+   "execution_count": 5,
+   "id": "quantitative-microwave",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +291,7 @@
        "array([[<AxesSubplot:title={'center':'0'}>]], dtype=object)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -292,9 +313,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "olive-truck",
+   "metadata": {},
+   "source": [
+    "### Adicionando mais 2 elementos (5 e 7 ) ao nosso dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "institutional-generator",
+   "execution_count": 26,
+   "id": "varying-memorabilia",
    "metadata": {},
    "outputs": [
     {
@@ -368,10 +397,26 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
-       "      <td>5</td>\n",
+       "      <td>[5, 7]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -379,36 +424,42 @@
        "</div>"
       ],
       "text/plain": [
-       "     0\n",
-       "0    0\n",
-       "1    1\n",
-       "2    2\n",
-       "3    3\n",
-       "4    4\n",
-       "5    5\n",
-       "6    6\n",
-       "7    7\n",
-       "8    8\n",
-       "9    9\n",
-       "10  10\n",
-       "11   5\n",
-       "12   7"
+       "         0\n",
+       "0        0\n",
+       "1        1\n",
+       "2        2\n",
+       "3        3\n",
+       "4        4\n",
+       "5        5\n",
+       "6        6\n",
+       "7        7\n",
+       "8        8\n",
+       "9        9\n",
+       "10      10\n",
+       "11  [5, 7]\n",
+       "12       5\n",
+       "13       5\n",
+       "14       7\n",
+       "15       5\n",
+       "16       7"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_new = pd.DataFrame(df[0].append(pd.Series([5, 7])).reset_index(drop=True))\n",
+    "a1.append(5)\n",
+    "a1.append(7)\n",
+    "df_new = pd.DataFrame(a1)\n",
     "df_new"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "id": "cubic-departure",
+   "execution_count": 7,
+   "id": "visible-quarter",
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +468,7 @@
        "array([[<AxesSubplot:title={'center':'0'}>]], dtype=object)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -440,8 +491,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "subject-robertson",
+   "execution_count": 8,
+   "id": "packed-november",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,8 +501,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "professional-banking",
+   "execution_count": 9,
+   "id": "invisible-check",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +596,7 @@
        "[1000 rows x 1 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,8 +610,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "lined-manor",
+   "execution_count": 10,
+   "id": "considered-olive",
    "metadata": {},
    "outputs": [
     {
@@ -636,7 +687,7 @@
        "max       7.352731"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,8 +698,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "separate-smell",
+   "execution_count": 11,
+   "id": "forward-hormone",
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +708,7 @@
        "array([[<AxesSubplot:title={'center':'0'}>]], dtype=object)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -680,8 +731,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "expired-thanksgiving",
+   "execution_count": 12,
+   "id": "deadly-riverside",
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +741,7 @@
        "<AxesSubplot:ylabel='Count'>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -714,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "actual-correction",
+   "id": "requested-intro",
    "metadata": {},
    "outputs": [],
    "source": []
