added 05-Resolucao Lista 04 com adaptacoes.ipynb

--- a/05-Resolucao Lista 04 com adaptacoes.ipynb
+++ b/05-Resolucao Lista 04 com adaptacoes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "selective-citizenship",
+   "id": "greater-brief",
    "metadata": {},
    "source": [
     "# Resolução resumida da Lista 05 com algumas adaptações"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "hispanic-poker",
+   "execution_count": 1,
+   "id": "running-wildlife",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "combined-evolution",
+   "id": "front-tourism",
    "metadata": {},
    "source": [
     "### $y$ e $\\hat{y}$ $(y\\_pred)$ representados por através no NumPy e também do Pandas"
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "important-vermont",
+   "execution_count": 2,
+   "id": "accredited-trinidad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "civic-immunology",
+   "execution_count": 3,
+   "id": "assisted-amendment",
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "3  7       7"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "differential-morocco",
+   "id": "sealed-stopping",
    "metadata": {},
    "source": [
     "### Implementações das métricas que permitem receber dados do NumPy ou do Pandas"
@@ -123,8 +123,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "loaded-unemployment",
+   "execution_count": 4,
+   "id": "fundamental-swift",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "inappropriate-steam",
+   "execution_count": 5,
+   "id": "threatened-visiting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,8 +145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "legitimate-reason",
+   "execution_count": 6,
+   "id": "becoming-westminster",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "present-grave",
+   "id": "duplicate-threshold",
    "metadata": {},
    "source": [
     "#### Usandos dados do NumPy"
@@ -164,8 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "round-serve",
+   "execution_count": 7,
+   "id": "textile-pickup",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "0.5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,8 +185,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "chubby-separate",
+   "execution_count": 8,
+   "id": "supposed-thirty",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "0.5"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,8 +206,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "automotive-usage",
+   "execution_count": 9,
+   "id": "weird-politics",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
        "0.5"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "spanish-pharmaceutical",
+   "execution_count": 10,
+   "id": "infrared-mainland",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "0.7071067811865476"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "iraqi-farming",
+   "id": "documented-durham",
    "metadata": {},
    "source": [
     "#### Usando dados do Pandas"
@@ -256,8 +256,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "theoretical-fault",
+   "execution_count": 11,
+   "id": "suited-disease",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "0.5"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accessible-concrete",
+   "id": "olive-cartoon",
    "metadata": {},
    "source": [
     "#### Se usássemos a média como y_pred, o RMSE seria igual ao desvio padrão."
@@ -285,8 +285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "international-dancing",
+   "execution_count": 12,
+   "id": "bacterial-cheese",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "1.8708286933869707"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,8 +306,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "norman-honduras",
+   "execution_count": 13,
+   "id": "billion-slovak",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
        "1.8708286933869707"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "scenic-handling",
+   "id": "contained-induction",
    "metadata": {},
    "source": [
     "### Divisão entre treino e teste"
@@ -335,8 +335,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "amazing-visibility",
+   "execution_count": 14,
+   "id": "assisted-bunch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,8 +345,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "cloudy-yorkshire",
+   "execution_count": 15,
+   "id": "steady-fabric",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename'])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,8 +366,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "medium-shame",
+   "execution_count": 16,
+   "id": "extra-engagement",
    "metadata": {},
    "outputs": [
     {
@@ -501,8 +501,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "geological-fluid",
+   "execution_count": 17,
+   "id": "instrumental-august",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "array(['malignant', 'benign'], dtype='<U9')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,8 +522,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "aware-gentleman",
+   "execution_count": 18,
+   "id": "academic-channel",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
        "'malignant'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,8 +543,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "celtic-florida",
+   "execution_count": 19,
+   "id": "educational-decision",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "'benign'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,8 +564,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "domestic-recipient",
+   "execution_count": 20,
+   "id": "excess-samuel",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
        "[569 rows x 30 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,8 +937,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "fourth-nerve",
+   "execution_count": 21,
+   "id": "passive-exercise",
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1337,7 @@
        "[569 rows x 30 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,8 +1349,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "upper-edward",
+   "execution_count": 22,
+   "id": "outdoor-requirement",
    "metadata": {},
    "outputs": [
     {
@@ -1736,7 +1736,7 @@
        "[569 rows x 31 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1748,8 +1748,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "boxed-windsor",
+   "execution_count": 23,
+   "id": "satisfactory-billion",
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1758,7 @@
        "'malignant'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1769,8 +1769,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "elementary-qualification",
+   "execution_count": 24,
+   "id": "resistant-harmony",
    "metadata": {},
    "outputs": [
     {
@@ -2156,7 +2156,7 @@
        "[569 rows x 31 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2169,7 +2169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blank-mainstream",
+   "id": "reliable-nicholas",
    "metadata": {},
    "source": [
     "#### Quantidade de elementos de cada classe"
@@ -2177,8 +2177,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "continental-timing",
+   "execution_count": 25,
+   "id": "capital-passage",
    "metadata": {},
    "outputs": [
     {
@@ -2189,7 +2189,7 @@
        "Name: class, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2200,7 +2200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fallen-assault",
+   "id": "valid-girlfriend",
    "metadata": {},
    "source": [
     "#### Percentual de cada classe"
@@ -2208,8 +2208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "fantastic-adoption",
+   "execution_count": 26,
+   "id": "preceding-selling",
    "metadata": {},
    "outputs": [
     {
@@ -2220,7 +2220,7 @@
        "Name: class, dtype: float64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2231,7 +2231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reduced-diagnosis",
+   "id": "consistent-deadline",
    "metadata": {},
    "source": [
     "### Função para divisão entre treino e teste. \n",
@@ -2240,8 +2240,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "coastal-remark",
+   "execution_count": 27,
+   "id": "worth-harvest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2267,8 +2267,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "id": "waiting-battle",
+   "execution_count": null,
+   "id": "provincial-translation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "prostate-handy",
    "metadata": {},
    "outputs": [
     {
@@ -2288,7 +2298,7 @@
        "Name: class, Length: 569, dtype: object"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2300,30 +2310,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "approximate-croatia",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Usando X e y do Pandas\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, 0.8, 42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "id": "selected-linux",
+   "execution_count": 29,
+   "id": "consolidated-quantity",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Usando X e y do NumPy\n",
-    "X_train, X_test, y_train, y_test = train_test_split(data['data'], data['target'], 0.8, 42)"
+    "X_train_np, X_test_np, y_train_np, y_test_np = train_test_split(data['data'], data['target'], 0.8, 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "exact-joyce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0, 165],\n",
+       "       [  1, 290]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique, counts = np.unique(y_train_np, return_counts=True)\n",
+    "np.asarray((unique, counts)).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "russian-carbon",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'X' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-7770f46112a7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Usando X e y do Pandas\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mX_train_pd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test_pd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train_pd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test_pd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m42\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# Usando X e y do Pandas\n",
+    "X_train_pd, X_test_pd, y_train_pd, y_test_pd = train_test_split(X, y, 0.8, 42)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sought-springfield",
+   "id": "tamil-minimum",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train_pd.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "documentary-battery",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(y_train_pd.value_counts() / y_train_pd.shape[0] * 100).round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "occasional-cylinder",
    "metadata": {},
    "outputs": [],
    "source": []
