--- a/05-Resolucao Lista 04 com adaptacoes.ipynb
+++ b/05-Resolucao Lista 04 com adaptacoes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "sealed-chemistry",
+   "id": "actual-mission",
    "metadata": {},
    "source": [
     "# Resolução resumida da Lista 05 com algumas adaptações"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "amazing-party",
+   "execution_count": 1,
+   "id": "miniature-gallery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "breeding-robertson",
+   "id": "cheap-baghdad",
    "metadata": {},
    "source": [
     "### $y$ e $\\hat{y}$ $(y\\_pred)$ representados por através no NumPy e também do Pandas"
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "coastal-circuit",
+   "id": "ultimate-floor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "suspected-pathology",
+   "id": "opposite-roots",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "qualified-harrison",
+   "id": "sacred-biography",
    "metadata": {},
    "source": [
     "### Implementações das métricas que permitem receber dados do NumPy ou do Pandas"
@@ -125,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "painful-winner",
+   "id": "abandoned-poetry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "honest-emergency",
+   "id": "narrow-celtic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "respiratory-contamination",
+   "id": "bored-northern",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "animal-indicator",
+   "id": "weekly-proceeding",
    "metadata": {},
    "source": [
     "#### Usandos dados do NumPy"
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "renewable-independence",
+   "id": "coordinate-dressing",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "buried-diameter",
+   "id": "continental-session",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "emotional-wales",
+   "id": "impressive-malpractice",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "separated-container",
+   "id": "furnished-museum",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "automated-soccer",
+   "id": "laughing-placement",
    "metadata": {},
    "source": [
     "#### Usando dados do Pandas"
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "complex-disabled",
+   "id": "revised-medium",
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "entertaining-trunk",
+   "id": "described-origin",
    "metadata": {},
    "source": [
     "#### Se usássemos a média como y_pred, o RMSE seria igual ao desvio padrão."
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "freelance-titanium",
+   "id": "anticipated-blade",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "peripheral-indiana",
+   "id": "faced-portland",
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "starting-provincial",
+   "id": "computational-railway",
    "metadata": {},
    "source": [
     "### Divisão entre treino e teste"
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "small-advance",
+   "id": "allied-seating",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "geological-chamber",
+   "id": "asian-cancer",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "accessory-surgery",
+   "id": "indonesian-outline",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "hundred-belarus",
+   "id": "casual-dubai",
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "younger-arrival",
+   "id": "union-offense",
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "smoking-arbitration",
+   "id": "pharmaceutical-overall",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,40 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "sealed-stomach",
+   "id": "grand-anthony",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.799e+01, 1.038e+01, 1.228e+02, ..., 2.654e-01, 4.601e-01,\n",
+       "        1.189e-01],\n",
+       "       [2.057e+01, 1.777e+01, 1.329e+02, ..., 1.860e-01, 2.750e-01,\n",
+       "        8.902e-02],\n",
+       "       [1.969e+01, 2.125e+01, 1.300e+02, ..., 2.430e-01, 3.613e-01,\n",
+       "        8.758e-02],\n",
+       "       ...,\n",
+       "       [1.660e+01, 2.808e+01, 1.083e+02, ..., 1.418e-01, 2.218e-01,\n",
+       "        7.820e-02],\n",
+       "       [2.060e+01, 2.933e+01, 1.401e+02, ..., 2.650e-01, 4.087e-01,\n",
+       "        1.240e-01],\n",
+       "       [7.760e+00, 2.454e+01, 4.792e+01, ..., 0.000e+00, 2.871e-01,\n",
+       "        7.039e-02]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "changed-negotiation",
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +959,7 @@
        "[569 rows x 30 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,8 +971,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "successful-beads",
+   "execution_count": 22,
+   "id": "tough-spell",
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1371,7 @@
        "[569 rows x 30 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,8 +1383,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "single-burden",
+   "execution_count": 23,
+   "id": "objective-departure",
    "metadata": {},
    "outputs": [
     {
@@ -1737,7 +1770,7 @@
        "[569 rows x 31 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1749,8 +1782,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "allied-workplace",
+   "execution_count": 24,
+   "id": "progressive-refrigerator",
    "metadata": {},
    "outputs": [
     {
@@ -1759,7 +1792,7 @@
        "'malignant'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1770,8 +1803,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "reasonable-yemen",
+   "execution_count": 25,
+   "id": "molecular-marker",
    "metadata": {},
    "outputs": [
     {
@@ -2157,7 +2190,7 @@
        "[569 rows x 31 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2170,7 +2203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "requested-aside",
+   "id": "southwest-tooth",
    "metadata": {},
    "source": [
     "#### Quantidade de elementos de cada classe"
@@ -2178,8 +2211,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "chronic-meter",
+   "execution_count": 26,
+   "id": "opposed-emphasis",
    "metadata": {},
    "outputs": [
     {
@@ -2190,7 +2223,7 @@
        "Name: class, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2201,7 +2234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handed-pittsburgh",
+   "id": "transparent-yahoo",
    "metadata": {},
    "source": [
     "#### Percentual de cada classe"
@@ -2209,8 +2242,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "golden-multiple",
+   "execution_count": 27,
+   "id": "opponent-organizer",
    "metadata": {},
    "outputs": [
     {
@@ -2221,7 +2254,7 @@
        "Name: class, dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2232,7 +2265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "innocent-figure",
+   "id": "organizational-cover",
    "metadata": {},
    "source": [
     "### Função para divisão entre treino e teste. \n",
@@ -2241,8 +2274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "alternate-assessment",
+   "execution_count": 28,
+   "id": "technological-ticket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2250,7 +2283,7 @@
     "    qtd = X.shape[0]\n",
     "    idx = np.random.RandomState(seed=seed).permutation(np.arange(qtd))\n",
     "    qtd_train = int(qtd * train_ratio)\n",
-    "    idx_train = idx[0:qtd_train]\n",
+    "    idx_train = idx[:qtd_train]\n",
     "    idx_test  = idx[qtd_train:]\n",
     "    if type(X) == np.ndarray:    # NumPy Array\n",
     "        X_train   = X[idx_train]\n",
@@ -2268,8 +2301,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "higher-ballot",
+   "execution_count": 29,
+   "id": "advised-airline",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Usando X e y do NumPy\n",
+    "X_train_np, X_test_np, y_train_np, y_test_np = my_train_test_split(data['data'], data['target'], 0.8, 42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "rental-score",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0, 165],\n",
+       "       [  1, 290]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique, counts = np.unique(y_train_np, return_counts=True)\n",
+    "np.asarray((unique, counts)).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "distributed-scratch",
    "metadata": {},
    "outputs": [
     {
@@ -2481,7 +2548,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2493,8 +2560,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "acoustic-equity",
+   "execution_count": 32,
+   "id": "orange-latex",
    "metadata": {},
    "outputs": [
     {
@@ -2514,7 +2581,7 @@
        "Name: class, Length: 569, dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2526,42 +2593,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "encouraging-flavor",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Usando X e y do NumPy\n",
-    "X_train_np, X_test_np, y_train_np, y_test_np = my_train_test_split(data['data'], data['target'], 0.8, 42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "id": "important-junior",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  0, 165],\n",
-       "       [  1, 290]])"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "unique, counts = np.unique(y_train_np, return_counts=True)\n",
-    "np.asarray((unique, counts)).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "reduced-edmonton",
+   "execution_count": 33,
+   "id": "stunning-linux",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2571,8 +2604,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "inside-ferry",
+   "execution_count": 34,
+   "id": "dimensional-reading",
    "metadata": {},
    "outputs": [
     {
@@ -2583,7 +2616,7 @@
        "Name: class, dtype: int64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2594,8 +2627,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "thorough-tolerance",
+   "execution_count": 35,
+   "id": "indoor-vision",
    "metadata": {},
    "outputs": [
     {
@@ -2606,7 +2639,7 @@
        "Name: class, dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2617,8 +2650,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "dense-passenger",
+   "execution_count": 36,
+   "id": "proper-marina",
    "metadata": {},
    "outputs": [
     {
@@ -2629,7 +2662,7 @@
        "Name: class, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2640,37 +2673,60 @@
   },
   {
    "cell_type": "markdown",
-   "id": "parental-briefing",
+   "id": "acknowledged-roller",
    "metadata": {},
    "source": [
-    "### Usando o train_test_split do Scikit"
+    "### Usando o train_test_split do Scikit Learn, que por padrão já usa estratificação sobre os rótulos."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "organic-memorabilia",
+   "execution_count": 37,
+   "id": "allied-psychology",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_pd_sk, X_test_pd_sk, y_train_pd_sk, y_test_pd_sk = train_test_split(X, y, train_size=0.8, random_state=42)"
+    "X_train_pd_sk, X_test_pd_sk, y_train_pd_sk, y_test_pd_sk = train_test_split(X, y, train_size=0.8, random_state=42, stratify=y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "olive-noise",
+   "execution_count": 38,
+   "id": "welcome-bundle",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "benign       62.86\n",
-       "malignant    37.14\n",
+       "benign       62.74\n",
+       "malignant    37.26\n",
        "Name: class, dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(y.value_counts() / y.shape[0] * 100).round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "atmospheric-leonard",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "benign       62.64\n",
+       "malignant    37.36\n",
+       "Name: class, dtype: float64"
+      ]
+     },
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2681,19 +2737,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "usual-sacramento",
+   "execution_count": 40,
+   "id": "extended-worthy",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "benign       62.28\n",
-       "malignant    37.72\n",
+       "benign       63.16\n",
+       "malignant    36.84\n",
        "Name: class, dtype: float64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2705,7 +2761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "representative-bailey",
+   "id": "revised-proposal",
    "metadata": {},
    "outputs": [],
    "source": []
